# Spyker

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  BUILD.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
3rd/half/: ChangeLog.txt  LICENSE.txt  README.txt
3rd/half/include/: half.hpp
cmake/: FindCUDNN.cmake  spykerConfig.cmake
docs/: Doxyfile  api.rst  conf.py  cxx.rst  doxy.cfg  index.rst  install.rst  requirements.txt  usage.rst
docs/files/: install.rst  python.rst  usage.rst
examples/: kheradpisheh_dense.py  kheradpisheh_mnist_dense.py  kheradpisheh_mnist_sparse.py  kheradpisheh_sparse.py  mozafari_alternative.py  mozafari_mnist_alternative.py  mozafari_mnist_original.py  mozafari_original.py  rezghi_dense.py  rezghi_mnist_dense.py  rezghi_mnist_sparse.py  rezghi_sparse.py
play/: play.cpp
src/bind/: bind.cpp
src/python/spyker/: __init__.py  module.py  private.py  rate.py  sparse.py  utils.py
src/spyker/: base.h  config.h.in  half.h  impl.cpp  impl.h  opers.cpp  opers.h  serial.h  shape.cpp  shape.h  spyker.h  utils.cpp  utils.h
src/spyker/cpu/: backprop.cpp  base.h  canny.cpp  code.cpp  conv.cpp  dog.cpp  fc.cpp  fire.cpp  inhibit.cpp  init.cpp  memory.cpp  pool.cpp  stdp.cpp  time.cpp  wta.cpp  zca.cpp
src/spyker/cuda/: backprop.cu  base.cu  base.cuh  canny.cu  code.cu  conv.cu  dog.cu  fc.cu  fire.cu  inhibit.cu  memory.cu  pool.cu  stdp.cu  time.cu  wta.cu
src/spyker/helper/: csv.cpp  csv.h  helper.h  image.cpp  image.h  mnist.cpp  mnist.h  serial.cpp  serial.h
src/spyker/sparse/: base.cpp  base.h  code.cpp  conv.cpp  inhibit.cpp  opers.cpp  pad.cpp  pool.cpp  stdp.cpp  wta.cpp
tutorial/: sparse_spyker.ipynb  spyker_and_numpy.ipynb  spyker_and_pytorch.ipynb  tutorial-1.ipynb  tutorial-2.ipynb  tutorial-3.ipynb  tutorial-4.ipynb  tutorial-5.ipynb
tutorials/: sparse_spyker.ipynb  spyker_and_numpy.ipynb
